k8s/infra/k8s/non-persistent/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "600m"
    nginx.org/client-max-body-size: "600m"
    # nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    # ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/enable-cors: "true"
    # nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  defaultBackend:
    service:
      name: frontend-srv
      port:
        number: 80
  tls:
    - hosts:
        - eshop.esite.gr
        # - www.eshop.esite.gr
      secretName: eshop-esite-gr
  rules:
    - host: eshop.esite.gr
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/products/?(.*)
            pathType: Prefix
            backend:
              service:
                name: products-srv
                port:
                  number: 3000
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend-srv
                port:
                  # number: 80
                  number: 4200
    # - host: www.eshop.esite.gr
    #   http:
    #     paths:
    #       - path: /api/users/?(.*)
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: auth-srv
    #             port:
    #               number: 3000
    #       - path: /api/products/?(.*)
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: products-srv
    #             port:
    #               number: 3000
    #       - path: /?(.*)
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: frontend-srv
    #             port:
    #               number: 80
    #               # number: 4200
# ---
# kind: ConfigMap
# apiVersion: v1
# metadata:
#   name: nginx-config
# data:
#   proxy-protocol: 'True'
#   real-ip-header: 'proxy_protocol'
#   set-real-ip-from: '135.181.153.207'
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  defaultBackend:
    service:
      name: kubernetes-dashboard
      port:
        number: 80
  tls:
    - hosts:
        - dsb.eshop.esite.gr
        # - www.dsb.eshop.esite.gr
      secretName: dsb-eshop-esite-gr
  rules:
    - host: dsb.eshop.esite.gr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 443
    # - host: www.dsb.eshop.esite.gr
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: kubernetes-dashboard
    #             port:
    #               number: 443
---
# kind: Ingress
# apiVersion: networking.k8s.io/v1
# metadata:
#   name: prometheus
#   namespace: gitlab-managed-apps
#   annotations:
#     cert-manager.io/cluster-issuer: 'letsencrypt-prod'
#     kubernetes.io/ingress.class: nginx
#     nginx.ingress.kubernetes.io/use-regex: 'true'
# spec:
#   tls:
#     - hosts:
#         - prometheus.eshop.esite.gr
#         - www.prometheus.eshop.esite.gr
#       secretName: prometheus-eshop-esite-gr
#   rules:
#     - host: prometheus.eshop.esite.gr
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: web
#                 port:
#                   number: 80
#     - host: www.prometheus.eshop.esite.gr
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: web
#                 port:
#                   number: 80
